<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_weather"
        android:title="@string/title_weather"
        android:icon="@drawable/ic_weather"/>

    <item
        android:id="@+id/navigation_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_recentHikes"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_recetnHikes" />
    <item
        android:id="@+id/navigation_currentHike"
        android:icon="@drawable/ic_mountain"
        android:title="@string/title_currenthiking"/>
    <item
        android:id="@+id/navigation_profile"
        android:title="@string/title_profile"/>
</menu>
